--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   header
     h1= 'Confesiones de la Vida'
   main
-    a(href=`http://localhost:${process.env.PORT || 3000}/new` class='btn')= "Confiésate!"
+    a(href='/new' class='btn')= "Confiésate!"
     each message in messages 
       section.message-card 
         h2= message.title
